stage/tests/ui/context_not_clone.stderr
error[E0599]: no method named `clone` found for struct `ActorContext<'_, Counter>` in the current scope
  --> tests/ui/context_not_clone.rs:19:24
   |
19 |     let _escaped = ctx.clone();
   |                        ^^^^^ method not found in `ActorContext<'_, Counter>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`
